run iteration checker